--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "ember-addon"
   ],
   "dependencies": {
+    "broccoli-filter": "^1.2.2",
+    "browser-sync": "^2.8.2",
     "ember-cli-babel": "^5.0.0"
   },
   "ember-addon": {
